--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,10 +15,10 @@
   ],
   "exports": {
     ".": {
-      "default": "./dist/esm/index.js",
       "import": "./dist/esm/index.js",
       "types": "./dist/esm/index.d.ts",
-      "require": "./dist/cjs/index.js"
+      "require": "./dist/cjs/index.js",
+      "default": "./dist/esm/index.js"
     }
   },
   "main": "./dist/cjs/index.js",
