--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,10 +14,10 @@
   "type": "module",
   "exports": {
     ".": {
-      "default": "./dist/esm/index.js",
       "import": "./dist/esm/index.js",
       "types": "./dist/esm/index.d.ts",
-      "require": "./dist/cjs/index.js"
+      "require": "./dist/cjs/index.js",
+      "default": "./dist/esm/index.js"
     }
   },
   "main": "./dist/cjs/index.js",
