--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:cjs:react": "cd packages/react && tsc --outDir ./dist/cjs --module commonjs",
     "build:cjs:prepublish": "node --loader ts-node/esm scripts/prepublish.ts",
     "prepublishOnly": "yarn build:cjs:clear && yarn build:cjs:prepublish",
-    "test": "yarn run vitest --config ./vitest.config.ts",
+    "test": "yarn run vitest --config ./vitest.config.ts --run",
+    "test:watch": "yarn run vitest --config ./vitest.config.ts --watch",
     "test:coverage": "yarn run vitest --config ./vitest.config.ts --coverage --run --coverage.exclude=packages/core/src/__test__",
     "postinstall": "tsm link",
     "purge": "rimraf packages/**/lib/* packages/**/dist/* packages/**/*.tsbuildinfo node_modules packages/**/node_modules",
